fixed the overflowing of the remaining balance's value for smaller screens

--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -363,3 +363,9 @@ input, select, textarea {
     }
 }
 
+@media (max-width: 1001px) and (min-width: 768px) { 
+    #remainingBalance {
+      font-size: clamp(1.4rem, 2vw, 1.5rem);
+    }
+  }
+  
